<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>phileas</artifactId>
    <groupId>ai.philterd</groupId>
    <packaging>pom</packaging>
    <version>2.12.3</version>
    <name>phileas</name>
    <url>https://www.philterd.ai</url>
    <description>Phileas is a library for identifying and redacting sensitive information from natural language text.
    </description>
    <inceptionYear>2019</inceptionYear>
    <organization>
        <name>Philterd, LLC</name>
        <url>https://www.philterd.ai</url>
    </organization>
    <scm>
        <connection>scm:git@github.com:philterd/phileas.git</connection>
        <developerConnection>scm:git@github.com:philterd/phileas.git</developerConnection>
        <url>https://github.com/philterd/phileas/</url>
    </scm>
    <developers>
        <developer>
            <name>Philterd, LLC</name>
            <email>support@philterd.ai</email>
            <organization>Philterd</organization>
            <organizationUrl>https://www.philterd.ai</organizationUrl>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>Apache License, version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <modules>
        <module>phileas-core</module>
        <module>phileas-model</module>
        <module>phileas-services</module>
        <module>phileas-processors</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- Project dependency versions -->
        <antlr.version>4.13.2</antlr.version>
        <commons.collections4.version>4.4</commons.collections4.version>
        <commons.lang3.version>3.17.0</commons.lang3.version>
        <commons.logging.version>1.3.5</commons.logging.version>
        <commons.codec.version>1.18.0</commons.codec.version>
        <commons.csv.version>1.14.0</commons.csv.version>
        <commons.io.version>2.18.0</commons.io.version>
        <commons.math.version>3.6.1</commons.math.version>
        <commons.text.version>1.12.0</commons.text.version>
        <commons.validator.version>1.9.0</commons.validator.version>
        <equals.verifier.version>3.19.1</equals.verifier.version>
        <ff3.version>1.2.0</ff3.version>
        <gson.version>2.12.1</gson.version>
        <hapi.fhir.version>4.2.0</hapi.fhir.version>
        <httpclient.version>5.5</httpclient.version>
        <json.version>20250107</json.version>
        <junit.version>5.11.3</junit.version>
        <libphonenumber.version>8.13.55</libphonenumber.version>
        <log4j.version>2.23.1</log4j.version>
        <maven.compiler.version>3.13.0</maven.compiler.version>
        <maven.failsafe.version>3.2.5</maven.failsafe.version>
        <maven.surefire.version>3.2.5</maven.surefire.version>
        <mockito.version>5.15.2</mockito.version>
        <opennlp.version>2.5.3</opennlp.version>
        <pdfbox.version>3.0.4</pdfbox.version>
        <snakeyaml.version>2.3</snakeyaml.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.7.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <additionalOptions>
                                <additionalOption>-Xdoclint:none</additionalOption>
                            </additionalOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <argLine>-Xmx8g --add-opens java.base/java.util=ALL-UNNAMED --add-opens
                        java.base/java.lang=ALL-UNNAMED
                    </argLine>
                    <excludes>
                        <exclude>**/*IT.java</exclude>
                    </excludes>
                    <systemPropertyVariables>
                        <jacoco-agent.destfile>**/jacoco.exec</jacoco-agent.destfile>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.version}</version>
                <configuration>
                    <includes>
                        <include>**/*IT.java</include>
                    </includes>
                    <skipITs>true</skipITs>
                </configuration>
                <executions>
                    <execution>
                        <id>failsafe-integration-tests</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>1.19</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>ban-bad-log4j-versions</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedDependencies>
                                    <excludes>
                                        <exclude>org.apache.logging.log4j:log4j-core:(,2.15.0)</exclude>
                                    </excludes>
                                </bannedDependencies>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.3</version>
                <configuration>
                    <destFile>>${project.build.directory}/jacoco.exec</destFile>
                    <append>true</append>
                </configuration>
                <executions>
                    <execution>
                        <id>agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>it</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <property>
                    <name>it</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.2</version>
                        <configuration>
                            <skipITs>false</skipITs>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>sign</id>
            <activation>
                <property>
                    <name>sign</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>owasp</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <property>
                    <name>owasp</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>12.1.0</version>
                        <inherited>false</inherited>
                        <configuration>
                            <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
                            <failOnError>false</failOnError>
                            <failBuildOnCVSS>0</failBuildOnCVSS>
                            <format>ALL</format>
                            <skipProvidedScope>true</skipProvidedScope>
                            <skipTestScope>true</skipTestScope>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
